--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,8 @@ body {
   display: flex;
   justify-content: center;
   background: #fafafa;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 14px;
+  font-family: Roboto, Ubuntu, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 87.5%;
 }
 
 .instagram-wrapper {
@@ -38,7 +38,7 @@ body {
   height: 427px;
   position: absolute;
   z-index: 999;
-  margin-left: 5rem;
+  margin-left: 2.6rem;
 }
 
 .instagram-login {
@@ -81,7 +81,7 @@ body {
   margin: 5px 0;
 }
 
-.instagram-login button {
+.button {
   background-color: #b2dffc;
   color: #fff;
   padding: 9px 8px;
@@ -95,7 +95,6 @@ body {
 .line {
   margin: 14px 0 10px 0;
   font-size: 14px;
-  text-transform: uppercase;
   color: #797979;
 }
 
@@ -110,7 +109,8 @@ body {
 }
 
 .p-fb {
-  font-size: 16px;
+  font-size: 14px;
+  font-weight: 500;
   color: #1333c4;
   margin: 10px 0;
 }
@@ -119,9 +119,8 @@ body {
   font-size: 11px;
 }
 
-
 .not-account a {
-  color: #0095f6;
+  color: #1333c4;
 }
 
 .get-the-app {
